Fixed iOS edge clipping bug.

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -71,6 +71,8 @@ header
 .hero-menu
   height: 570px
   max-height: 800px
+  .hero-btns
+    width: 980px
   .value-prop
     padding: 113px 0 0
     height: 316px
@@ -87,12 +89,12 @@ header
     background-color: rgba(255,255,255,0.9)
     text-align: center
     cursor: pointer
-    width: 320px
+    width: 314px
     height: 58px
     padding: 18px 0 34px 0
     border-radius:  4px
     float: left
-    margin:  0 15px 0 0
+    margin-right: 19px
     color: $font-color
     @include single-box-shadow(rgba(0,0,0,0.2), 0px, 2px, 3px)
     h3
